tests/machine/x/go/cross_join_filter.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/cross_join_filter.go:14:14: undefined: Pairs
tests/machine/x/go/cross_join_filter.go:15:16: undefined: Pairs
tests/machine/x/go/cross_join_filter.go:19:32: undefined: Pairs
